@@ -1,14 +1,17 @@
 package com.umesdnd.CampusLeague.service;
 
-import com.umesdnd.CampusLeague.exception.BadRequestException;
+import com.umesdnd.CampusLeague.exception.NewExceptionType;
 import com.umesdnd.CampusLeague.model.*;
+import com.umesdnd.CampusLeague.model.DTO.TeamDTO;
 import com.umesdnd.CampusLeague.repository.PlayerPositionRepository;
 import com.umesdnd.CampusLeague.repository.TeamRepository;
 import com.umesdnd.CampusLeague.service.interfaces.TeamServiceInterface;
 import com.umesdnd.CampusLeague.utills.DuplicateData;
 import org.springdoc.webmvc.ui.SwaggerIndexTransformer;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -30,27 +33,52 @@ public class TeamService implements TeamServiceInterface {
 
     @Autowired
     DuplicateData duplicateData;
+
     @Autowired
     private SwaggerIndexTransformer indexPageTransformer;
+
     @Autowired
     private PlayerPositionService playerPositionService;
 
-    @Override
+
+    @Transactional
+    public TeamDTO getWithPlayers(Long id) {
+        Team team = teamRepository.findById(id).orElseThrow(() -> new NewExceptionType("Team not found with", HttpStatus.NOT_FOUND));
+
+        team.getPlayers().size();
+
+        TeamDTO teamDTO = TeamDTO.builder()
+                .id(team.getId())
+                .name(team.getName())
+                .inscription_date(team.getInscription_date())
+                .approved_date(team.getApproved_date())
+                .user(team.getUser())
+                .status(team.getStatus())
+                .coach(team.getCoach())
+                .players(team.getPlayers())
+                .build();
+
+        return teamDTO;
+    }
+
+    @Transactional
     public Team getById(Long id) {
-        return teamRepository.findById(id).orElseThrow(() -> new RuntimeException("Team not found with id " + id));
+        Team team = teamRepository.findById(id).orElseThrow(() -> new NewExceptionType("Team not found with id " + id, HttpStatus.NOT_FOUND));
+        team.getPlayers().size();
+        return team;
     }
 
     @Override
     public Team saveOne(Team team) {
 
-        if (team.getName() == null || team.getName().trim().isEmpty()) {
-            throw new BadRequestException("No existe nombre para el Team");
+        if (team.getName() == null || team.getName().trim().isBlank()) {
+            throw new NewExceptionType("No existe nombre para el Team" , HttpStatus.BAD_REQUEST);
         }
         if (this.teamRepository.existsByName(team.getName())) {
-            throw new BadRequestException("Ya existe un Team con ese nombre");
+            throw new NewExceptionType("Ya existe un Team con ese nombre", HttpStatus.BAD_REQUEST);
         }
         if (team.getPlayers() == null || team.getPlayers().isEmpty()) {
-            throw new BadRequestException("No existen jugadores para el Team");
+            throw new NewExceptionType("No existen jugadores para el Team", HttpStatus.BAD_REQUEST);
         }
 
         if (team.getStatus() == null) {
@@ -73,28 +101,28 @@ public class TeamService implements TeamServiceInterface {
         List<String> repeated = duplicateData.duplicate(carnets);
 
         if (!repeated.isEmpty()) {
-            throw new BadRequestException("No se puede ingresar carnets duplicados: " + repeated);
+            throw new NewExceptionType("No se puede ingresar carnets duplicados: " + repeated, HttpStatus.BAD_REQUEST);
         }
 
         for (Player player : team.getPlayers()) {
 
-            if (player.getNames() == null || player.getNames().trim().isEmpty()) {
-                throw new BadRequestException("No se ingreso nombre para el jugador con carnet: " + player.getCarnet());
+            if (player.getNames() == null || player.getNames().trim().isBlank()) {
+                throw new NewExceptionType("No se ingreso nombre para el jugador con carnet: " + player.getCarnet(), HttpStatus.BAD_REQUEST);
             }
 
             if (player.getAge() <= 0 || player.getAge() > 100) {
-                throw new BadRequestException("La edad no es correcta para el jugador " + player.getNames());
+                throw new NewExceptionType("La edad no es correcta para el jugador " + player.getNames(), HttpStatus.BAD_REQUEST);
             }
 
-            if (player.getCarnet() == null || player.getCarnet().trim().isEmpty()) {
-                throw new BadRequestException("No se ingreso un carnet para el jugador " + player.getNames());
+            if (player.getCarnet() == null || player.getCarnet().trim().isBlank()) {
+                throw new NewExceptionType("No se ingreso carnet para el jugador " + player.getNames(), HttpStatus.BAD_REQUEST);
             }
 
             if (player.getPosition() == null || player.getPosition().getId() == null) {
-                throw new BadRequestException("No se ingreso posicion para el jugador " + player.getNames());
+                throw new NewExceptionType("No se ingreso posicion para el jugador " + player.getNames(), HttpStatus.BAD_REQUEST);
             }
             if (!this.playerPositionRepository.existsById(player.getPosition().getId())) {
-                throw new BadRequestException("No existe la posición  para el jugador " + player.getNames());
+                throw new NewExceptionType("No existe la posición  para el jugador " + player.getNames(), HttpStatus.BAD_REQUEST);
             }
             PlayerPosition fullPosition = playerPositionService.getById(player.getPosition().getId());
             player.setPosition(fullPosition);
@@ -106,6 +134,7 @@ public class TeamService implements TeamServiceInterface {
 
     @Override
     public Team update(Long id, Team team) {
+        System.out.println(team + " " + id);
         Team existingTeam = teamRepository.findById(id).orElseThrow(() -> new RuntimeException("Team not found with id " + id));
 
         existingTeam.setName(team.getName());
@@ -123,8 +152,10 @@ public class TeamService implements TeamServiceInterface {
         teamRepository.delete(team);
     }
 
-    @Override
+    @Transactional
     public List<Team> getAll() {
+        List<Team> teams = teamRepository.findAll();
+        teams.forEach(team -> team.getPlayers().size());
         return teamRepository.findAll();
     }
 }
