@@ -1,6 +1,6 @@
 package com.umesdnd.CampusLeague.service;
 
-import com.umesdnd.CampusLeague.exception.BadRequestException;
+import com.umesdnd.CampusLeague.exception.NewExceptionType;
 import com.umesdnd.CampusLeague.model.Status;
 import com.umesdnd.CampusLeague.model.User;
 import com.umesdnd.CampusLeague.repository.UserRepository;
@@ -8,6 +8,7 @@ import com.umesdnd.CampusLeague.service.interfaces.UserInterfaceService;
 import com.umesdnd.CampusLeague.utills.BCryptPassService;
 import com.umesdnd.CampusLeague.utills.DecipherPasswordService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 
@@ -34,30 +35,30 @@ public class UserService implements UserInterfaceService {
     @Override
     public User saveUser(User user) {
         if (user == null) {
-            throw new BadRequestException("No se recivio ningun usuario");
+            throw new NewExceptionType("No se recivio ningun usuario", HttpStatus.BAD_REQUEST);
         }
 
-        if (user.getUsername() == null || user.getUsername().trim().isEmpty()) {
-            throw new BadRequestException("El nombre de usuario no puede estar vacío");
+        if (user.getUsername() == null || user.getUsername().trim().isBlank()) {
+            throw new NewExceptionType("El nombre de usuario no puede estar vacío", HttpStatus.BAD_REQUEST);
         }
 
-        if (user.getPassword() == null || user.getPassword().trim().isEmpty()) {
-            throw new BadRequestException("La contraseña no puede estar vacía");
+        if (user.getPassword() == null || user.getPassword().trim().isBlank()) {
+            throw new NewExceptionType("La contraseña no puede estar vacía", HttpStatus.BAD_REQUEST);
         }
 
-        if (user.getEmail() == null || user.getEmail().trim().isEmpty()) {
-            throw new BadRequestException("El correo electrónico no puede estar vacío");
+        if (user.getEmail() == null || user.getEmail().trim().isBlank()) {
+            throw new NewExceptionType("El correo electrónico no puede estar vacío", HttpStatus.BAD_REQUEST);
         }
 
         if (user.getStatus() == null) {
             user.setStatus(statusService.getById(1L));
         }
         if (this.userRepository.findByUsername(user.getUsername()).isPresent()) {
-            throw new BadRequestException("El username del usuario ya existe");
+            throw new NewExceptionType("El username del usuario ya existe", HttpStatus.BAD_REQUEST);
         }
 
         if (this.userRepository.findByEmail(user.getEmail()).isPresent()) {
-            throw new BadRequestException("El email del usuario ya existe");
+            throw new NewExceptionType("El email del usuario ya existe", HttpStatus.BAD_REQUEST);
         }
 
 
